--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@kobalab/majiang-ai": "^1.0.13",
     "@kobalab/majiang-core": "^1.3.2",
+    "@kobalab/tenhou-log": "^1.3.0",
     "jquery": "^3.7.1",
     "jquery-ui": "^1.14.1"
   }
