--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kobalab/majiang-ui.git"
+    "url": "git+https://github.com/coralsundy/majiang-ui.git"
   },
   "keywords": [
     "麻雀",
@@ -20,9 +20,9 @@
   "author": "Satoshi Kobayashi",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kobalab/majiang-ui/issues"
+    "url": "https://github.com/coralsundy/majiang-ui/issues"
   },
-  "homepage": "https://github.com/kobalab/majiang-ui#readme",
+  "homepage": "https://github.com/coralsundy/majiang-ui#readme",
   "dependencies": {
     "@kobalab/majiang-ai": "^1.0.13",
     "@kobalab/majiang-core": "^1.3.2",
